# git_metadata_reader

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: cli.rs  heatmap.rs  lib.rs  main.rs  repository.rs  tui.rs  ui.rs  user_commit_info.rs
tests/common/: mod.rs
