[package]
name = "git_history_explorer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
git2 = "0.20.2"
chrono = "0.4"
ratatui = "0.28"
crossterm = "0.28"
polars = { version = "0.43", features = ["lazy", "temporal", "dtype-date", "dtype-u16"] }
rayon = "1.8"
once_cell = "1.19"
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.8"